--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,6 +17,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 	<uses-permission android:name="android.permission.BLUETOOTH" />
 	<uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+	<uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:allowBackup="true"
@@ -90,11 +91,10 @@
         </service>
         <service
             android:name=".JnsIMEInputMethodService"
-            android:permission="android.permission.BIND_INPUT_METHOD" >
+            >
             <intent-filter>
-                <action android:name="android.view.InputMethod" />
+                <action android:name="com.viaplay.ime.JnsIMEInputMethodService" />
             </intent-filter>
-    		<meta-data android:name="android.view.im" android:resource="@xml/method"/>    
 		</service>
 		<service
 		    android:exported="false"
@@ -104,7 +104,7 @@
     			<action android:name="com.viaplay.ime.JnsIMEBtService"/>
     		</intent-filter>		 
 		</service>
-
+		<!--  
         <receiver 
 		android:name=".JnsIMESystemBootBroadcast" >
             <intent-filter>
@@ -120,6 +120,7 @@
                 <action android:name="android.bluetooth.device.action.PAIRING_REQUEST" /> 
             </intent-filter>
         </receiver>
+        -->
         <activity android:theme="@style/activitydialog" 
             android:name="JnsIMEBtListActivity"
             >
